syntax = "proto3";
package order;

option go_package = "./pb";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse) {}
  rpc FetchOrder(FetchOrderRequest) returns (FetchOrderResponse) {}
}

// AddOrder

message CreateOrderRequest {
  string UserId =1 ;
  string OrderId =2 ;
  string Status =3 ;
  repeated Item Item =4;
  float Total =5 ;
  string CurrencyUnit =6;
}

message CreateOrderResponse {
  int32 status = 1;
  string error = 2;
  string id = 3;
}


message Item {
  string ID = 1;
  string Description =2 ;
  float Price = 3;
  int64 Quantity = 4;
}


// UpdateOrder

message UpdateOrderRequest {
  string userId =1 ;
  string OrderId =2 ;
  string Status =3;
}

message UpdateOrderResponse {
  int32 status = 1;
  string error = 2;
  string id = 3;
}



// FetchOrder

message FetchOrderRequest {
  int64 userId =1 ;
}

message FetchOrderResponse {
  int32 status = 1;
  string error = 2;
  repeated Order orders = 3;
}
 
message Order {
  string OrderId =2 ;
  string Status =3 ;
  repeated Item Item =4;
  float Total =5 ;
  string CurrencyUnit =6;
}